<resources>
    <string name="wallpaper_description">Displays a different color background based on the current time</string>

    <string name="settings_cat_title_about">About</string>
    <string name="settings_cat_key_about">settings_cat_key_about</string>
    <string name="settings_cat_key_background">settings_cat_key_background</string>
    <string name="settings_cat_title_background">Background</string>
    <string name="settings_key_color_change_duration">settings_key_color_change_duration</string>
    <string name="settings_key_color_change_on_touch">settings_key_color_change_on_touch</string>
    <string name="settings_key_show_links_first">settings_key_show_links_first</string>
    <string name="settings_key_app_version">settings_key_app_version</string>
    <string name="settings_key_build_info">settings_key_build_info</string>
    <string name="settings_key_rate">settings_key_rate</string>
    <string name="settings_key_support">settings_key_support</string>
    <string name="settings_key_licenses">settings_key_licenses</string>
    <string name="settings_title_color_change_duration">Color change duration</string>
    <string name="settings_title_color_change_on_touch">Change color on touch</string>
    <string name="settings_title_show_links_first">Show links first</string>
    <string name="settings_title_app_version">App version</string>
    <string name="settings_title_build_info">Build info</string>
    <string name="settings_title_rate">Rate app</string>
    <string name="settings_title_support">Support</string>
    <string name="settings_title_licenses">Licenses</string>
    <string name="settings_summary_rate">If you like the app, please leave a rating in Google Play</string>
    <string name="settings_summary_support">Email support with feedback or requests</string>
    <string name="settings_summary_licenses">Libraries used to create this app</string>
    <string name="settings_summary_build_info">Build Time: %1$s. Git Sha: %2$s</string>
    <string name="settings_summary_color_change_duration">The amount of time to display a color before switching</string>
    <string name="settings_summary_color_change_on_touch">Change background color when touching wallpaper</string>
    <string name="support_email_subject_template">%1$s %2$s support</string>

    <string-array name="settings_entries_color_change_duration">
        <item>1 second</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>Once per day</item>
    </string-array>

    <string-array name="settings_entry_values_color_change_duration">
        <item>1000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
        <item>600000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
</resources>
