<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/settings_cat_key_background"
        android:title="@string/settings_cat_title_background">

        <ListPreference
            android:defaultValue="1000"
            android:entries="@array/settings_entries_color_change_duration"
            android:entryValues="@array/settings_entry_values_color_change_duration"
            android:key="@string/settings_key_color_change_duration"
            android:summary="@string/settings_summary_color_change_duration"
            android:title="@string/settings_title_color_change_duration" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_key_color_change_on_touch"
            android:summary="@string/settings_summary_color_change_on_touch"
            android:title="@string/settings_title_color_change_on_touch"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/settings_cat_key_about"
        android:title="@string/settings_cat_title_about">

        <Preference
            android:key="@string/settings_key_app_version"
            android:selectable="false"
            android:title="@string/settings_title_app_version" />

        <Preference
            android:key="@string/settings_key_build_info"
            android:selectable="false"
            android:title="@string/settings_title_build_info" />

        <Preference
            android:key="@string/settings_key_rate"
            android:summary="@string/settings_summary_rate"
            android:title="@string/settings_title_rate" />

        <Preference
            android:key="@string/settings_key_support"
            android:summary="@string/settings_summary_support"
            android:title="@string/settings_title_support" />

        <Preference
            android:key="@string/settings_key_licenses"
            android:summary="@string/settings_summary_licenses"
            android:title="@string/settings_title_licenses" />

    </PreferenceCategory>

</PreferenceScreen>